--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-streamlit
-transformers
-sentence-transformers
-PyPDF2
-faiss-cpu
-pdfminer.six
+streamlit==1.26.0
+transformers==4.41.2
+sentence-transformers==2.6.1
+torch==2.2.2
+PyPDF2==3.0.1
+faiss-cpu==1.7.4
+pdfminer.six==20221105
+scikit-learn==1.4.2
