--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.26.0
 transformers==4.41.2
 sentence-transformers==2.6.1
-torch==2.1.2
+torch==1.13.1
 PyPDF2==3.0.1
-faiss-cpu==1.7.4
+# faiss-cpu==1.7.4  <-- REMOVE or COMMENT THIS
 pdfminer.six==20221105
 scikit-learn==1.4.2
