--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.26.0
 transformers==4.41.2
 sentence-transformers==2.6.1
-torch==2.5.0
+torch==2.2.0
 PyPDF2==3.0.1
-faiss-cpu==1.7.4
+# faiss-cpu==1.7.4
 pdfminer.six==20221105
-scikit-learn==1.3.2
+scikit-learn==1.2.2
